--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   @apply shadow-md py-3 px-6 rounded-md transition duration-300;
 }
 
+.btn2 {
+  @apply shadow-md py-2 px-5 rounded-md transition duration-300;
+}
+
 .btn-purple {
   @apply bg-bookmark-red text-white;
 }
